--- a/index.html
+++ b/index.html
@@ -323,5 +323,62 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="container fot">
+             <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/24.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a class="nb" href="">Copyright 2021. Antools</a>
+                </li>
+                <li>
+                    <a href="">Antool is a web collection of information on paid or free Design and Development tools</a>
+                </li>
+             </ul>
+             <ul>
+                    <li>
+                        <a class="asa" href="">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="">+621987463</a>
+                    </li>
+                    <li>
+                        <a href="">M Building, No.10 A</a>
+                    </li>
+                    <li>
+                        <a href="">antools@awesome.com</a>
+                    </li>
+             </ul>
+             <ul>
+                <li>
+                    <a class="asa" href="">Categories</a>
+                </li>
+                <li>
+                    <a href="">Design</a>
+                </li>
+                <li>
+                    <a href="">Development</a>
+                </li>
+             </ul>
+             <ul>
+                <li>
+                    <a class="asa" href="">Company Info</a>
+                </li>
+                <li>
+                    <a href="">About Us</a>
+                </li>
+                <li>
+                    <a href="">Our Partners</a>
+                </li>
+                <li>
+                    <a href="">Blog</a>
+                </li>
+             </ul>
+        </div>
+    </footer>
 </body>
 </html>
